--- a/0_PROJECT HANDOUT CONTENTS/2_Phase I SYSTEM HANDOUT/AcuitySTAR/src/gui/ErrorEditDialog.ui
+++ b/0_PROJECT HANDOUT CONTENTS/2_Phase I SYSTEM HANDOUT/AcuitySTAR/src/gui/ErrorEditDialog.ui
@@ -18,17 +18,34 @@
     <normaloff>:/icon32.ico</normaloff>:/icon32.ico</iconset>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0" colspan="4">
-    <widget class="QTableWidget" name="tableWidget"/>
-   </item>
-   <item row="2" column="2">
+   <item row="2" column="6">
     <widget class="QPushButton" name="cancel">
      <property name="text">
       <string>Cancel</string>
      </property>
     </widget>
    </item>
+   <item row="2" column="5">
+    <widget class="QPushButton" name="save">
+     <property name="maximumSize">
+      <size>
+       <width>798</width>
+       <height>16777215</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>Save</string>
+     </property>
+    </widget>
+   </item>
    <item row="2" column="0">
+    <widget class="QPushButton" name="prevButton">
+     <property name="text">
+      <string>Previous</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="2">
     <spacer name="horizontalSpacer">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -42,17 +59,14 @@
     </spacer>
    </item>
    <item row="2" column="1">
-    <widget class="QPushButton" name="save">
-     <property name="maximumSize">
-      <size>
-       <width>798</width>
-       <height>16777215</height>
-      </size>
-     </property>
+    <widget class="QPushButton" name="nextButton">
      <property name="text">
-      <string>Save</string>
+      <string>Next</string>
      </property>
     </widget>
+   </item>
+   <item row="0" column="0" colspan="8">
+    <widget class="QTableWidget" name="tableWidget"/>
    </item>
   </layout>
  </widget>
